<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reciepe_list"
    android:name="rainmekka.andela.com.bakingreciepeapp.ReciepeListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layoutManager="LinearLayoutManager"
    tools:context="rainmekka.andela.com.bakingreciepeapp.ui.ReciepeListActivity"
    tools:listitem="@layout/reciepe_list_content" />
